app/components/menu/menu.css
#menuTabs {
    min-height: 50px;
}

#tabsContainer {
    height: 100%;
    overflow: visible;
}

md-tab-content div:first-child {
    height: 650px;
}

md-tabs md-tabs-content-wrapper {
    overflow: visible;
    height: 100%;
}

md-tabs-content-wrapper md-tab-content {
    overflow: visible;
    height: 100%;
}

md-pagination-wrapper {
    width: 100%;
}

md-icon[md-svg-icon="close"] {
    position: relative;
    top: -1px;
}


/* Toolbar area */

.menu {
    background-color: transparent;
    border: none;
    height: 38px;
    margin: 16px;
    width: 36px;
}

md-toolbar h1 {
    margin: auto;
}


/* Sidenav area */

md-list .md-button {
    color: inherit;
    font-weight: 500;
    text-align: left;
    width: 100%;
}

md-list .md-button.selected {
    color: #03a9f4;
}

md-sidenav md-list {
    padding: 0px 0px 8px 0px;
}

md-tabs .md-tab md-icon[md-svg-icon="close"] {
    color: grey;
    cursor: pointer;
    position: relative;
    top: -1px;
}

md-menu.tab-menu {
    position: absolute;
    top: 62px;
    left: 92%;
}
div.quickSearch input {
    color: white;
    border: 1px solid white;
    border-radius: 5px;
    transition: all .25s linear;
    width: 28px;
    background: url("../../assets/svg/ic_search_white_24px.svg");
    background-position: right center;
    background-repeat: no-repeat;
    outline-style: none;
}

div.quickSearch input:focus {
    width: 100%;
}

div.quickSearch md-icon {
    margin: 5px;
}

